# grpc_tests

./: .gitignore  pyproject.toml
src/: converter.py
src/route_guide/: base.proto  client.py
src/route_guide/protos/: base_pb2.py  base_pb2.pyi  base_pb2_grpc.py
src/route_guide/server/: server.py
src/send_file/: client.py  converter.py  file.proto
src/send_file/grpc_files/: file_pb2.py  file_pb2.pyi  file_pb2_grpc.py
src/send_file/server/: interceptor.py  schemas.py  server.py
src/send_file/server/files/: file_2.yaml  file_3.xlsx
